Generalizacao do pacote PPGEDUC para a UNEB

--- a/uneb-ppgeduc.tex
+++ b/uneb-ppgeduc.tex
@@ -9,7 +9,8 @@
 	brazil,
 	]{abntex2}
 
-\usepackage{uneb-ppgeduc} % customizacoes do PPGEDUC
+\usepackage{uneb} 				% customizacoes do ABNTEX para a UNEB
+\usepackage[utf8]{inputenc}		% Codificacao do documento (acentos)
 
 % Informacoes para capa e folha de rosto
 \titulo{Título do Trabalho}
