--- a/uneb.sty
+++ b/uneb.sty
@@ -1,5 +1,5 @@
 % Declaracao do pacote de estilos
-\ProvidesPackage{uneb-ppgeduc}[2019/05/31 AbnTeX UNEB PPGEDUC]
+\ProvidesPackage{uneb}[2019/05/31 AbnTeX UNEB]
 
 % Pacote necessario para inclusao do brasao na capa
 \RequirePackage{graphicx}
