JD: inclusao do elementos textuais no modelo

--- a/uneb-jd.tex
+++ b/uneb-jd.tex
@@ -105,4 +105,15 @@
 \cleardoublepage
 % ---
 
+% ------------------
+% ELEMENTOS TEXTUAIS
+% ------------------
+\textual
+
+\include{introducao/introducao}
+\include{fundamentacao/fundamentacao}
+\include{metodologia/metodologia}
+\include{resultados/resultados}
+\include{conclusao/conclusao}
+
 \end{document}
