--- a/uneb-jd.tex
+++ b/uneb-jd.tex
@@ -116,4 +116,11 @@
 \include{resultados/resultados}
 \include{conclusao/conclusao}
 
+% ----------------------
+% ELEMENTOS PÓS-TEXTUAIS
+% ----------------------
+\postextual
+
+\bibliography{referencias}	% Referencias bibliograficas
+
 \end{document}
